--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "^20.10.6",
+    "@wix/bookings": "^1.0.355",
     "@wix/ecom": "^1.0.444",
+    "@wix/events": "^1.0.193",
     "@wix/redirects": "^1.0.34",
     "@wix/sdk": "^1.7.2",
     "@wix/stores": "^1.0.121",
