--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "^20.10.6",
     "@wix/bookings": "^1.0.355",
+    "@wix/members": "^1.0.76",
     "@wix/redirects": "^1.0.34",
     "@wix/sdk": "^1.7.2",
     "classnames": "^2.3.2",
