--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@types/node": "^20.10.6",
     "@wix/bookings": "^1.0.355",
     "@wix/redirects": "^1.0.34",
