--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "^20.10.6",
     "@wix/bookings": "^1.0.355",
-    "@wix/members": "^1.0.76",
+    "@wix/members": "^1.0.82",
     "@wix/redirects": "^1.0.34",
     "@wix/sdk": "^1.7.2",
     "classnames": "^2.3.2",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "swr": "^2.2.5"
